Changed linkedin and github icons to be hyperlinks themselves

--- a/Web_Fundamentals/Week _1/Day_1/Personal_Portfolio/index.html
+++ b/Web_Fundamentals/Week _1/Day_1/Personal_Portfolio/index.html
@@ -11,10 +11,10 @@
     </head>
     <body>
         <h1>Aditya Chakravarthi</h1>
-        <img src="/Users/adityachakravarthi/Desktop/Coding_Dojo/Web_Fundamentals/Week _1/Day_1/Personal_Portfolio/Images/github_img_real.png" width="30" height="30" alt="github image">
-        <a href="https://github.com/adichakra12">GitHub</a>
-        <img src="/Users/adityachakravarthi/Desktop/Coding_Dojo/Web_Fundamentals/Week _1/Day_1/Personal_Portfolio/Images/linkedin_img.jpeg" width="30" height="30" alt="linkedin image">
-        <a href=https://www.linkedin.com/in/adityachakravarthi>LinkedIn</a>
+        <a href="https://github.com/adichakra12"><img src="/Users/adityachakravarthi/Desktop/Coding_Dojo/Web_Fundamentals/Week _1/Day_1/Personal_Portfolio/Images/github_img_real.png" 
+            width="30" height="30" alt="github image"></a>
+        <a href=https://www.linkedin.com/in/adityachakravarthi><img src="/Users/adityachakravarthi/Desktop/Coding_Dojo/Web_Fundamentals/Week _1/Day_1/Personal_Portfolio/Images/linkedin_img.jpeg" 
+            width="30" height="30" alt="linkedin image"></a>
         <div>
             <p style="width:1000px">I am a personable and analytically minded junior Computer and Data Science student from Oakland, CA seeking employment in fields of Data Science and Software
                 Engineering. I am experienced in back-end services development and keen to further my knowledge within Software Engineering. I consider myself a strong leader
