added email icon with mailto functionality

--- a/Web_Fundamentals/Week _1/Day_1/Personal_Portfolio/index.html
+++ b/Web_Fundamentals/Week _1/Day_1/Personal_Portfolio/index.html
@@ -13,8 +13,10 @@
         <h1>Aditya Chakravarthi</h1>
         <a href="https://github.com/adichakra12"><img src="/Users/adityachakravarthi/Desktop/Coding_Dojo/Web_Fundamentals/Week _1/Day_1/Personal_Portfolio/Images/github_img_real.png" 
             width="30" height="30" alt="github image"></a>
-        <a href=https://www.linkedin.com/in/adityachakravarthi><img src="/Users/adityachakravarthi/Desktop/Coding_Dojo/Web_Fundamentals/Week _1/Day_1/Personal_Portfolio/Images/linkedin_img.jpeg" 
+        <a href="https://www.linkedin.com/in/adityachakravarthi"><img src="/Users/adityachakravarthi/Desktop/Coding_Dojo/Web_Fundamentals/Week _1/Day_1/Personal_Portfolio/Images/linkedin_img.jpeg" 
             width="30" height="30" alt="linkedin image"></a>
+            <a href = "mailto:ace.chakra@gmail.com?subject = email&body = Message"><img src="/Users/adityachakravarthi/Desktop/Coding_Dojo/Web_Fundamentals/Week _1/Day_1/Personal_Portfolio/Images/email_img.webp" 
+            width="32" height="32" alt="email image"></a>
         <div>
             <p style="width:1000px">I am a personable and analytically minded junior Computer and Data Science student from Oakland, CA seeking employment in fields of Data Science and Software
                 Engineering. I am experienced in back-end services development and keen to further my knowledge within Software Engineering. I consider myself a strong leader
